[gd_scene load_steps=6 format=2]

[ext_resource path="res://edit/EditElement.gd" type="Script" id=1]
[ext_resource path="res://fonts/BergenSans-Bold.otf" type="DynamicFontData" id=2]
[ext_resource path="res://edit/Button.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="EditElement" type="Control"]
margin_right = 1200.0
margin_bottom = 232.0
rect_min_size = Vector2( 1200, 232 )
focus_mode = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="LineEdit" parent="."]
anchor_left = 0.0466667
anchor_top = 0.625517
anchor_right = 0.0466667
anchor_bottom = 0.625517
margin_left = 73.0
margin_top = -92.1199
margin_right = 540.0
margin_bottom = 11.8801
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
align = 1
context_menu_enabled = false
shortcut_keys_enabled = false
placeholder_text = "click to edit"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoverButton" type="TextureButton" parent="."]
anchor_left = 0.0866667
anchor_right = 0.0866667
margin_left = 532.0
margin_right = 1732.0
margin_bottom = 1000.0
rect_scale = Vector2( 0.2, 0.2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContentButton" type="TextureButton" parent="."]
anchor_left = 0.0866667
anchor_right = 0.0866667
margin_left = 808.0
margin_right = 2008.0
margin_bottom = 1000.0
rect_scale = Vector2( 0.2, 0.2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteButton" type="Button" parent="."]
margin_left = 58.0
margin_top = 54.0
margin_right = 119.0
margin_bottom = 99.0
text = "delete"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RevealButton" type="Button" parent="."]
margin_left = 57.0
margin_top = 105.0
margin_right = 120.0
margin_bottom = 154.0
text = "reveal"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="text_changed" from="Title" to="." method="_on_Title_text_changed"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="pressed" from="RevealButton" to="." method="_on_RevealButton_pressed"]
